<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/fullname"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="92dp"
        android:background="@drawable/textinput_border"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingBottom="0dp"
        android:textColor="@color/colorWhiteFont"
        android:textColorHint="@color/colortHint"
        android:textSize="13.5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/textinput_border"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/birthday"
        android:inputType="textPersonName"
        android:paddingBottom="0dp"
        android:textColor="@color/colorWhiteFont"
        android:textColorHint="@color/colortHint"
        android:textSize="13.5sp"
        app:layout_constraintBottom_toTopOf="@+id/idNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <EditText
        android:id="@+id/idNumber"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/textinput_border"
        android:ems="10"
        android:hint="@string/idNumber"
        android:inputType="number"
        android:paddingBottom="0dp"
        android:textColor="@color/colorWhiteFont"
        android:textColorHint="@color/colortHint"
        android:textSize="13.5sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday" />

    <EditText
        android:id="@+id/email"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/textinput_border"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="0dp"
        android:textColor="@color/colorWhiteFont"
        android:textColorHint="@color/colortHint"
        android:textSize="13.5sp"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idNumber" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/textinput_border"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="number"
        android:paddingBottom="0dp"
        android:textColor="@color/colorWhiteFont"
        android:textColorHint="@color/colortHint"
        android:textSize="13.5sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/textinput_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="0dp"
        android:textColor="@color/colorWhiteFont"
        android:textColorHint="@color/colortHint"
        android:textSize="13.5sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/textinput_border"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:paddingBottom="0dp"
        android:textColor="@color/colorWhiteFont"
        android:textColorHint="@color/colortHint"
        android:textSize="13.5sp"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/button_file"
        android:text="@string/createAccount"
        android:textColor="@color/colorWhiteFont"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/reg_button"
        android:text="@string/regLogin"
        android:textColor="@color/colorWhiteFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>